# mac-skill-forge

./: .gitignore  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: DEMO.md
examples/calculator_handwritten/: SKILL.md
examples/calculator_handwritten/scripts/: replay.py
examples/status_email/: SKILL.md
examples/status_email/scripts/: replay.py
scripts/: make_gif.sh  record_status_email.py  verify_phase1.py  verify_phase2.py  verify_phase4.py  verify_phase5.py
skill_forge/: __init__.py  __main__.py  cli.py
skill_forge/codify/: replay_script.py  skill_md.py
skill_forge/pipeline/: claude_client.py  orchestrator.py  prompts.py  schema.py
skill_forge/pipeline/stages/: abstractor.py  parameterizer.py  segmenter.py  validator.py
skill_forge/recorder/: ax_selector.py  ax_snapshot.py  event_tap.py  permissions.py  screen_capture.py  session.py
skill_forge/replay/: actions.py  ax_resolve.py  runner.py  vision_fallback.py
skill_forge/utils/: ax_helpers.py  logging.py
tests/: test_ax_selector.py  test_codify.py  test_pipeline.py  test_replay_actions.py  test_session_writer.py
