[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-forge"
version = "0.1.0"
description = "Teach your Mac once; let any Claude agent replay it."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Rahul" }]
dependencies = [
    "pyobjc-core",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-ApplicationServices",
    "anthropic>=0.40",
    "typer>=0.12",
    "rich>=13",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
forge = "skill_forge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["skill_forge"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["examples/calculator_demo", "examples/status_email"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
