[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-forge"
version = "0.1.0"
description = "Teach your Mac once; let any Claude agent replay it."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Rahul" }]
keywords = ["macos", "automation", "accessibility", "llm", "claude", "skills"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Desktop Environment",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "pyobjc-core",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Quartz",
    "pyobjc-framework-ApplicationServices",
    "httpx>=0.25",
    "typer>=0.12",
    "rich>=13",
]

[project.urls]
Homepage = "https://github.com/Rahul-sch/mac-skill-forge"
Repository = "https://github.com/Rahul-sch/mac-skill-forge"
Issues = "https://github.com/Rahul-sch/mac-skill-forge/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
forge = "skill_forge.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["skill_forge"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["examples/calculator_demo", "examples/status_email"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
